# rcli

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  test.rest
.github/workflows/: build.yml
fixtures/: b64.txt  blake3.txt  ed25519.pk  ed25519.sk  index.html
src/: lib.rs  main.rs  opts.rs  process.rs  utils.rs
src/cli/: b64.rs  csv.rs  genpass.rs  http.rs  mod.rs  text.rs
src/process/: b64.rs  csv.rs  csv_convert.rs  gen_pass.rs  genpass.rs  httpserve.rs  mod.rs  text.rs
